http://bugzilla.opennms.org/show_bug.cgi?id=1444
Patch to handle composite JMX Attributes